tests/whole_screen/snapshots/whole_screen__queue_sent_highlighted_now_in_ascii_at_40.snap
---
source: tests/whole_screen/main.rs
assertion_line: 1359
expression: steadied_picture(&window.picture())
---
40x40 cursor 37,20 scrolled 0
|CRUCIBLE                                |
|/.../workspace                          |
|                                        |
|> start it                              |
|                                        |
|* Bash(sleep 30)                        |
|  + (n... (+2 lines - ctrl+o to expand) |
|                                        |
|It is started. That is all.             |
|                                        |
|! stopped                               |
|                                        |
|> then run the whole gate               |
|                                        |
|It is started. That is all.             |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|| writing (0s - esc to interrupt)       |
|----------------------------------------|
|                                        |
|2 queued - ctrl+enter to send all now   |
|                                        |
|  and add a test for the windows path   |
|                                        |
|> check the ascii glyphs too            |
|                                        |
|^v to walk - ctrl+e to edit - ctrl+x to |
|delete - ctrl+s to send now             |
|                                        |
|                         99% window left|
|+--------------------------------------+|
|| > and the box last                   ||
|+--------------------------------------+|
|ask mode on    anthropic - claude-test-1|
