tests/whole_screen/snapshots/whole_screen__release_notes_list_at_80.snap
---
source: tests/whole_screen/main.rs
expression: shape(&picture)
---
80x24 cursor 23,0 scrolled 0
|│ · shift+tab  steps the permission mode                                      ││|
|│ · ctrl+c     clears the line typed so far                                   ││|
|╰─────────────────────────────────────────────────────────────────────────────╯│|
|                                                                               │|
|                                                                               │|
|Warning: No models available. Use /login or set an API key environment         ┃|
|variable. Then use /model to select a model.                                   ┃|
|                                                                               ┃|
|› /release-notes                                                               ┃|
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Release notes                                                                   |
|                                                                                |
|› ######      ####-##-##    ## entries   this version                           |
|  #.##.#      ####-##-##    ## entries                                          |
|  #.##.#      ####-##-##    ## entries                                          |
|  #.##.#      ####-##-##    ## entries                                          |
|  #.##.#      ####-##-##    ## entries                                          |
|  #.##.#      ####-##-##    ## entries                                          |
|  #.##.#      ####-##-##    ## entries                                          |
|  #.##.#      ####-##-##    ## entries                                          |
|  all # releases ↓                                                              |
|                                                                                |
|↑↓ to walk · enter opens it · esc to close                                      |
