tests/whole_screen/snapshots/whole_screen__release_notes_mid_turn_are_refused_on_the_panel.snap
---
source: tests/whole_screen/main.rs
assertion_line: 2722
expression: refused
---
60x24 cursor 23,0 scrolled 0
|│ No recent sessions                                      ││|
|│                                                         ││|
|│ ─────────────────────────────────────────────────────── ││|
|│                                                         ││|
|│ Tips                                                    ││|
|│                                                         │┃|
|│ · /          opens the command list                     │┃|
|│ · \ enter    adds a line without sending                │┃|
|│ · shift+tab  steps the permission mode                  │┃|
|│ · ctrl+c     clears the line typed so far               │┃|
|╰─────────────────────────────────────────────────────────╯┃|
|                                                           ┃|
|› start it                                                 ┃|
|                                                           ┃|
|● Bash(sleep 30)                                           ┃|
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)          ┃|
|                                                           ┃|
|It is started. That is all.                                ┃|
|────────────────────────────────────────────────────────────|
|                                                            |
|/release-notes                                              |
|prints a thousand rows into the answer being written        |
|                                                            |
|esc to close                                                |
