tests/whole_screen/snapshots/whole_screen__release_notes_one_from_the_list_at_80.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 21,4 scrolled 0
|╰─────────────────────────────────────────────────────────────────────────────╯│|
|                                                                               │|
|                                                                               │|
|Warning: No models available. Use /login or set an API key environment         │|
|variable. Then use /model to select a model.                                   │|
|                                                                               │|
|› /release-notes                                                               │|
|                                                                               │|
|◆ 0.41.1 · 2026-09-14                                                          ┃|
|                                                                               ┃|
|   Security                                                                    ┃|
|   • A TLS 1.3 handshake that breaks the protocol's encryption rules is        ●|
|     refused. crucible now uses rustls 0.23.45, which rejects a handshake      ┃|
|     message a server sends in plaintext where it must be encrypted            ┃|
|     (RUSTSEC-2026-0285). The handshake stayed authenticated, so no connection ┃|
|     could be altered or taken over, but earlier versions accepted a server    ┃|
|     that broke the rule.                                                      ┃|
|                                                                               ┃|
|                                                                                |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
